# Portfolio-AI-Assistant-

./: .gitignore  BUGS_FIXED.md  COMPLETED.md  EFFICIENCY_TEST_RESULTS.md  PLAYWRIGHT_EFFICIENCY_RESULTS.md  PROJECT_STATUS.md  QUICK_START.md  README.md  RUN_ME.md  SETUP_GUIDE.md  START.txt  START_HERE.md  SUCCESS.md  start_all.py  test_backend_efficiency.py
.gemini/: settings.json
backend/: 2.0.0  ERROR_FIXES.md  README.md  RUN_INSTRUCTIONS.md  UPGRADE_SUMMARY.md  config.py  conversations.db-shm  conversations.db-wal  env.example  list_models.py  main.py  pyproject.toml  requirements.txt  run.py  start_and_test.py  test_backend.py  test_efficiency.py  test_import.py  test_setup.py
backend/agents/: __init__.py  gemini_agent.py  portfolio_agent.py
backend/portfolio_agents/: __init__.py  portfolio_agent.py
backend/routes/: __init__.py  assistant.py  contact.py
backend/services/: __init__.py  context_service.py
backend/utils/: __init__.py  logging_config.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/components/: About.tsx  ChatbotWidget.tsx  Contact.tsx  Hero.tsx  Navbar.tsx  Projects.tsx  Skills.tsx
frontend/types/: generative-ai.d.ts
